Update and rename ejarchive to ejarchive.html
This is my work in progress homework

--- a/ejarchive.html
+++ b/ejarchive.html
@@ -22,6 +22,10 @@
 				<ul>
 					<li>The social media acounts that I use are linked here.</li>
 				</ul>
+			<li><a href="#reebok">Spotlight: Reebok x Married to the Mob</a></li>
+				<ul>
+					<li>I was a model for a Reebok x Married to the Mob collaboration. Click the link above to watch the campaign video I was in.</li>
+				</ul>
 		</ol></div>
 	<hr>
 	<a name="aboutme"></a>
@@ -41,10 +45,11 @@
 			<li><a href="https://twitter.com/emilypavis"target="_blank">Twitter</a>: @emilypavis</li>
 		</ul>
 	<hr>
-
-	<h3 class="social">Spotlight: Reebok x Married to the Mob</h3>
+	<a name="reebok"></a>
+	<h3 class="social">Spotlight: Reebok x Married to the Mob:</h3>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/4-N7gw65-lk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 
 	</h1>
-
+</body>
+</html>
